--- a/index.html
+++ b/index.html
@@ -872,6 +872,19 @@ input::placeholder, textarea::placeholder { color: #707070; }
     <button onclick="addOther()">Add</button>
   </div>
 </div>
+
+<div class="section">
+  <h2>Professional Achievements (Optional)</h2>
+  <p style="color: #a0a0a0; font-size: 13px; margin-bottom: 12px;">
+    Awards, recognitions, memberships, publications, speaking engagements, projects, certifications, etc.
+  </p>
+  <div class="form-group">
+    <textarea id="achievements" 
+              placeholder="e.g., Won sales award 2 years in a row, Board member of local nonprofit, Published in industry journal, Speaker at 4 conferences, Led merger integration, Increased team productivity by 40%..."
+              style="height: 80px; resize: vertical;"></textarea>
+  </div>
+</div>
+        
         <div class="section">
           <h2>Additional Notes</h2>
           <div class="form-group">
@@ -1330,7 +1343,7 @@ async function analyzeOffer() {
     progressBar.style.width = Math.min(progress, 90) + '%';
   }, 300);
 
-  const profile = {
+ const profile = {
     currentJobTitle: document.getElementById('currentJobTitle').value,
     currentCompany: document.getElementById('currentCompany').value,
     currentSalary: currentSalary,
@@ -1344,7 +1357,8 @@ async function analyzeOffer() {
     priority_remote: parseInt(document.getElementById('priorityRemote').value),
     priority_brand: parseInt(document.getElementById('priorityBrand').value),
     resumeData: resumeData ? resumeData.text.substring(0, 2000) : null,
-    extractedData: window.extractedData || { skills: [], certifications: [], other: [] }
+    extractedData: window.extractedData || { skills: [], certifications: [], other: [] },
+    achievements: document.getElementById('achievements').value
   };
 
   const job = {
@@ -1853,11 +1867,12 @@ async function runAnalysisAfterPayment() {
   const baseSalary = parseInt(document.getElementById('baseSalary').value);
   const currentSalary = parseInt(document.getElementById('currentSalary').value);
 
-  const profile = {
+const profile = {
     currentJobTitle: document.getElementById('currentJobTitle').value,
-    currentSalary,
-    currentHours: parseInt(document.getElementById('currentHours').value),
-    yearsExp: parseInt(document.getElementById('yearsExp').value),
+    currentCompany: document.getElementById('currentCompany').value,
+    currentSalary: currentSalary,
+    currentHours: parseInt(document.getElementById('currentHours').value) || 0,
+    yearsExp: parseInt(document.getElementById('yearsExp').value) || 0,
     currentCompanySize: document.getElementById('currentCompanySize').value,
     priority_salary: parseInt(document.getElementById('prioritySalary').value),
     priority_balance: parseInt(document.getElementById('priorityBalance').value),
@@ -1865,9 +1880,10 @@ async function runAnalysisAfterPayment() {
     priority_stability: parseInt(document.getElementById('priorityStability').value),
     priority_remote: parseInt(document.getElementById('priorityRemote').value),
     priority_brand: parseInt(document.getElementById('priorityBrand').value),
-    resumeData: resumeData ? resumeData.text.substring(0, 2000) : null
+    resumeData: resumeData ? resumeData.text.substring(0, 2000) : null,
+    extractedData: window.extractedData || { skills: [], certifications: [], other: [] },
+    achievements: document.getElementById('achievements').value
   };
-
   const job = {
     jobTitle,
     company,
