--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -876,7 +876,7 @@ input::placeholder, textarea::placeholder { color: #707070; }
 <div class="section">
   <h2>Professional Achievements (Optional)</h2>
   <p style="color: #a0a0a0; font-size: 13px; margin-bottom: 12px;">
-    Awards, recognitions, memberships, publications, speaking engagements, projects, certifications, etc.
+    Awards, recognitions, memberships, publications, speaking engagements, projects, etc.
   </p>
   <div class="form-group">
     <textarea id="achievements" 
