--- a/index.html
+++ b/index.html
@@ -376,21 +376,21 @@ input::placeholder, textarea::placeholder { color: #707070; }
 .tags-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 8px;
+  gap: 6px;
   margin-bottom: 12px;
 }
-
 .tag {
   display: inline-flex;
   align-items: center;
-  gap: 8px;
+  gap: 6px;
   background: linear-gradient(135deg, rgba(76, 181, 255, 0.15) 0%, rgba(100, 255, 159, 0.15) 100%);
   border: 1px solid rgba(76, 181, 255, 0.3);
-  padding: 8px 14px;
-  border-radius: 20px;
-  font-size: 13px;
+  padding: 6px 10px;
+  border-radius: 16px;
+  font-size: 12px;
   color: #c0c0c0;
   transition: all 0.3s;
+  white-space: nowrap;
 }
 
 .tag:hover {
