--- a/index.html
+++ b/index.html
@@ -391,6 +391,8 @@ input::placeholder, textarea::placeholder { color: #707070; }
   color: #c0c0c0;
   transition: all 0.3s;
   white-space: nowrap;
+  width: auto;
+  flex: none;
 }
 
 .tag:hover {
