--- a/index.html
+++ b/index.html
@@ -378,6 +378,7 @@ input::placeholder, textarea::placeholder { color: #707070; }
   flex-wrap: wrap;
   gap: 4px;
   margin-bottom: 12px;
+  width: fit-content;
 }
 .tag {
   display: inline-flex;
