--- a/index.html
+++ b/index.html
@@ -381,19 +381,20 @@ input::placeholder, textarea::placeholder { color: #707070; }
   width: fit-content;
 }
 .tag {
-  display: inline-flex;
-  align-items: center;
-  gap: 4px;
+  display: inline-block;
   background: linear-gradient(135deg, rgba(76, 181, 255, 0.15) 0%, rgba(100, 255, 159, 0.15) 100%);
   border: 1px solid rgba(76, 181, 255, 0.3);
-  padding: 4px 8px;
-  border-radius: 14px;
-  font-size: 11px;
+  padding: 3px 6px;
+  border-radius: 12px;
+  font-size: 10px;
   color: #c0c0c0;
   transition: all 0.3s;
   white-space: nowrap;
-  width: auto;
-  flex: none;
+}
+
+.tag:hover {
+  transform: scale(1.05);
+  box-shadow: 0 4px 12px rgba(76, 181, 255, 0.2);
 }
 
 .tag-remove {
@@ -401,12 +402,12 @@ input::placeholder, textarea::placeholder { color: #707070; }
   border: none;
   color: #ff6b6b;
   cursor: pointer;
-  font-size: 14px;
+  font-size: 12px;
   padding: 0 2px;
-  display: flex;
-  align-items: center;
+  margin-left: 3px;
   transition: 0.2s;
 }
+
 .tag-remove:hover {
   transform: scale(1.3);
 }
