--- a/index.html
+++ b/index.html
@@ -374,27 +374,35 @@ input::placeholder, textarea::placeholder { color: #707070; }
 }
 
 /* IMPROVED TAGS – compact, responsive, good-looking */
+/* PERFECT SKILL TAGS — compact, wrap beautifully, never too wide */
 .tags-container {
-  gap: 8px;                 /* a bit more breathing room */
-  row-gap: 12px;            /* better vertical spacing when wrapping */
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;                  /* space between tags */
+  justify-content: flex-start;
+  padding: 8px 0;
 }
 
 .tag {
   display: inline-flex;
   align-items: center;
-  background: linear-gradient(135deg, rgba(76, 181, 255, 0.15) 0%, rgba(100, 255, 159, 0.15) 100%);
+  background: linear-gradient(135deg, rgba(76, 181, 255, 0.15), rgba(100, 255, 159, 0.15));
   border: 1px solid rgba(76, 181, 255, 0.3);
-  padding: 6px 10px;        /* smaller padding */
-  border-radius: 20px;      /* pill shape */
-  font-size: 11px;          /* smaller font */
+  padding: 7px 12px;          /* comfortable but not huge */
+  border-radius: 30px;        /* perfect pill shape */
+  font-size: 12px;
   font-weight: 600;
   color: #c0e0ff;
   line-height: 1;
-  max-width: 100%;          /* important for long tags */
-  overflow: hidden;
-  transition: all 0.25s ease;
   white-space: nowrap;
+
+  /* THIS IS THE KEY: prevent tags from growing too wide */
+  max-width: 220px;           /* adjust if needed (180–240 works great) */
+  overflow: hidden;
   text-overflow: ellipsis;
+
+  transition: all 0.25s ease;
+  flex-shrink: 0;             /* prevents squishing */
 }
 
 .tag span {
@@ -404,27 +412,31 @@ input::placeholder, textarea::placeholder { color: #707070; }
 }
 
 .tag:hover {
-  transform: translateY(-1px);
-  box-shadow: 0 4px 12px rgba(76, 181, 255, 0.25);
+  transform: translateY(-2px);
   border-color: #00d4ff;
+  box-shadow: 0 4px 15px rgba(76, 181, 255, 0.3);
 }
 
 .tag-remove {
-  margin-left: 6px;
-  background: none;
-  border: none;
+  margin-left: 8px;
+  background: rgba(255, 107, 107, 0.2);
   color: #ff6b6b;
-  font-size: 14px;
+  border: none;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  font-size: 12px;
   font-weight: bold;
   cursor: pointer;
-  padding: 0 4px;
-  opacity: 0.7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   transition: 0.2s;
 }
 
 .tag-remove:hover {
-  opacity: 1;
-  transform: scale(1.3);
+  background: #ff6b6b;
+  color: white;
 }
 
 .add-tag-input {
