--- a/index.html
+++ b/index.html
@@ -388,6 +388,7 @@ input::placeholder, textarea::placeholder { color: #707070; }
   align-items: center;
   background: linear-gradient(135deg, rgba(76, 181, 255, 0.15), rgba(100, 255, 159, 0.15));
   border: 1px solid rgba(76, 181, 255, 0.3);
+ max-width: 160px !important;
   padding: 7px 12px;          /* comfortable but not huge */
   border-radius: 30px;        /* perfect pill shape */
   font-size: 12px;
