--- a/index.html
+++ b/index.html
@@ -378,25 +378,24 @@ input::placeholder, textarea::placeholder { color: #707070; }
 .tags-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
-  padding: 10px 0;
+  gap: 9px;
+  padding: 12px 0;
 }
 
-tag {
-  display: inline-flex;              /* ← this is the magic */
+.tag {
+  display: inline-flex;
   align-items: center;
-  height: 32px;
-  padding: 0 14px;                   /* only left/right padding you control */
-  background: linear-gradient(135deg, #1e2a38, #162231);
-  border: 1px solid #00d4ff;
-  border-radius: 20px;
+  gap: 6px;
+  height: 26px;
+  padding: 0 8px;                  /* ← ultra-tight padding (this is what you wanted) */
+  background: transparent;        /* no fill at all */
+  border: 1.5px solid #00d4ff;     /* thin cyan border */
+  border-radius: 6px;              /* slight rounding like your example */
   font-size: 13px;
-  font-weight: 600;
-  color: #e0f2ff;
-  white-space: nowrap;               /* prevents text from wrapping */
-  box-shadow: inset 0 2px 8px rgba(0,212,255,0.15);
-  
-  /* ← REMOVE any max-width, min-width, flex-grow, flex-basis you had before */
+  font-weight: 700;
+  color: #e0f4ff;
+  white-space: nowrap;
+  transition: all 0.2s;
 }
 
 .tag span {
@@ -406,20 +405,16 @@ tag {
 }
 
 .tag:hover {
-  transform: translateY(-2px);
-  border-color: #00d4ff;
-  box-shadow: 0 4px 15px rgba(76, 181, 255, 0.3);
+  background: rgba(0, 212, 255, 0.1);
+  border-color: #64fff5;
 }
 
 .tag-remove {
-  margin-left: 8px;
-  width: 20px;
-  height: 20px;
-  background: rgba(255,107,107,0.3);
-  border: 1px solid #ff6b6b;
- Beliefs;
-  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+  background: transparent;
   color: #ff6b6b;
+  font-size: 14px;
   font-weight: bold;
   display: flex;
   align-items: center;
@@ -427,10 +422,8 @@ tag {
   cursor: pointer;
 }
 .tag-remove:hover {
-  background: #ff6b6b;
-  color: white;
+  color: #ff3333;
 }
-
 .add-tag-input {
   display: flex;
   gap: 8px;
