--- a/index.html
+++ b/index.html
@@ -989,6 +989,10 @@ input::placeholder, textarea::placeholder { color: #707070; }
             <textarea id="concerns" placeholder="e.g., Long commute, unclear growth path, company culture concerns..."></textarea>
           </div>
         </div>
+       <div class="form-group">
+  <label>Job Requirements (Copy from job posting - what you need to have)</label>
+  <textarea id="jobRequirements" placeholder="e.g., 5+ years systems engineering, TS/SCI clearance required, Python experience, Bachelor's degree, etc."></textarea>
+</div>
 
         <div class="button-row">
           <button class="btn-primary" id="analyzeBtn" onclick="analyzeOffer()">Analyze This Offer</button>
@@ -1371,19 +1375,19 @@ async function analyzeOffer() {
   };
 
   const job = {
-    jobTitle: jobTitle,
-    company: company,
-    baseSalary: baseSalary,
-    equity: document.getElementById('equity').value,
-    bonus: document.getElementById('bonus').value,
-    hoursPerWeek: parseInt(document.getElementById('hoursPerWeek').value) || 0,
-    workEnv: document.getElementById('workEnv').value,
-    fundingStage: document.getElementById('fundingStage').value,
-    teamSize: parseInt(document.getElementById('teamSize').value) || 0,
-    industry: document.getElementById('industry').value,
-    concerns: document.getElementById('concerns').value
-  };
-
+  jobTitle: jobTitle,
+  company: company,
+  baseSalary: baseSalary,
+  equity: document.getElementById('equity').value,
+  bonus: document.getElementById('bonus').value,
+  hoursPerWeek: parseInt(document.getElementById('hoursPerWeek').value) || 0,
+  workEnv: document.getElementById('workEnv').value,
+  fundingStage: document.getElementById('fundingStage').value,
+  teamSize: parseInt(document.getElementById('teamSize').value) || 0,
+  industry: document.getElementById('industry').value,
+  concerns: document.getElementById('concerns').value,
+  requirements: document.getElementById('jobRequirements').value
+};
   try {
     const response = await fetch("/api/analyze-offer", {
       method: "POST",
@@ -1893,19 +1897,20 @@ const profile = {
     extractedData: window.extractedData || { skills: [], certifications: [], other: [] },
     achievements: document.getElementById('achievements').value
   };
-  const job = {
-    jobTitle,
-    company,
-    baseSalary,
-    equity: document.getElementById('equity').value,
-    bonus: document.getElementById('bonus').value,
-    hoursPerWeek: parseInt(document.getElementById('hoursPerWeek').value),
-    workEnv: document.getElementById('workEnv').value,
-    fundingStage: document.getElementById('fundingStage').value,
-    teamSize: parseInt(document.getElementById('teamSize').value),
-    industry: document.getElementById('industry').value,
-    concerns: document.getElementById('concerns').value
-  };
+ const job = {
+  jobTitle: jobTitle,
+  company: company,
+  baseSalary: baseSalary,
+  equity: document.getElementById('equity').value,
+  bonus: document.getElementById('bonus').value,
+  hoursPerWeek: parseInt(document.getElementById('hoursPerWeek').value) || 0,
+  workEnv: document.getElementById('workEnv').value,
+  fundingStage: document.getElementById('fundingStage').value,
+  teamSize: parseInt(document.getElementById('teamSize').value) || 0,
+  industry: document.getElementById('industry').value,
+  concerns: document.getElementById('concerns').value,
+  requirements: document.getElementById('jobRequirements').value
+};
 
   const response = await fetch("/api/analyze-offer", {
     method: "POST",
