--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ input::placeholder, textarea::placeholder { color: #9ca3af; }
   padding: 20px;
   border-radius: 8px;
   margin: 20px 0;
-  color: #64ff9f;
+  color: #1f2937;
   font-weight: 600;
 }
 
