--- a/index.html
+++ b/index.html
@@ -286,13 +286,12 @@ input::placeholder, textarea::placeholder { color: #9ca3af; }
   font-size: 13px;
 }
 
-/* STORY SECTION */
 .story-section {
   margin-top: 100px;
   padding: 80px 40px;
-  background: linear-gradient(135deg, rgba(233, 69, 96, 0.05) 0%, rgba(255, 107, 107, 0.05) 100%);
+  background: #ffffff;
   border-radius: 24px;
-  border: 1px solid rgba(233, 69, 96, 0.2);
+  border: none;
 }
 
 .story-section h2 {
@@ -317,13 +316,13 @@ input::placeholder, textarea::placeholder { color: #9ca3af; }
 }
 
 .story-highlight {
-  background: rgba(59, 130, 246, 0.1);
+  background: rgba(59, 130, 246, 0.2);
   border-left: 4px solid #3b82f6;
   padding: 20px;
   border-radius: 8px;
   margin: 20px 0;
-  color: #1f2937;
-  font-weight: 600;
+  color: #1e40af;
+  font-weight: 700;
 }
 
 .story-visual {
