--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ input::placeholder, textarea::placeholder { color: #9ca3af; }
   border-radius: 6px;
   font-size: 12px;
   font-weight: 600;
-  color: #e0f4ff;
+  color: #1e40af;
   white-space: nowrap;
   transition: all 0.2s;
   height: auto;
