--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ input::placeholder, textarea::placeholder { color: #9ca3af; }
     .pros-cons h3 { color: #10b981; margin-bottom: 10px; font-size: 16px; }
     .pro-item { color: #10b981; margin: 8px 0; padding-left: 20px; }
     .pro-item::before { content: '✓ '; font-weight: bold; }
-    .con-item { color: #ff6b6b; margin: 8px 0; padding-left: 20px; }
+    .con-item { color: #cc0000; margin: 8px 0; padding-left: 20px; }
     .con-item::before { content: '✗ '; font-weight: bold; }
     
     .comparison { background: rgba(59, 130, 246, 0.05); padding: 20px; border-radius: 8px; margin: 20px 0; border: 1px solid rgba(59, 130, 246, 0.2); }
