--- a/index.html
+++ b/index.html
@@ -1398,6 +1398,11 @@ button.innerHTML = '<span class="spinner-big"></span> Extracting...';      butto
       }
     }
 
+// ========================================
+// FIXED analyzeOffer() function
+// Replace your entire analyzeOffer() function with this
+// ========================================
+
 async function analyzeOffer() {
   const jobTitle = document.getElementById('jobTitle').value.trim();
   const company = document.getElementById('company').value.trim();
@@ -1424,10 +1429,10 @@ async function analyzeOffer() {
     return;
   }
 
-if (analysisCount >= 5) {
-  showPaymentModal();
-  return;
-}
+  if (analysisCount >= 5) {
+    showPaymentModal();
+    return;
+  }
 
   analysisCount++;
   localStorage.setItem('ScreenJob_analysisCount', analysisCount);
@@ -1454,7 +1459,7 @@ if (analysisCount >= 5) {
     progressBar.style.width = Math.min(progress, 90) + '%';
   }, 300);
 
- const profile = {
+  const profile = {
     currentJobTitle: document.getElementById('currentJobTitle').value,
     currentCompany: document.getElementById('currentCompany').value,
     currentSalary: currentSalary,
@@ -1473,19 +1478,20 @@ if (analysisCount >= 5) {
   };
 
   const job = {
-  jobTitle: jobTitle,
-  company: company,
-  baseSalary: baseSalary,
-  equity: document.getElementById('equity').value,
-  bonus: document.getElementById('bonus').value,
-  hoursPerWeek: parseInt(document.getElementById('hoursPerWeek').value) || 0,
-  workEnv: document.getElementById('workEnv').value,
-  fundingStage: document.getElementById('fundingStage').value,
-  teamSize: parseInt(document.getElementById('teamSize').value) || 0,
-  industry: document.getElementById('industry').value,
-  concerns: document.getElementById('concerns').value,
-  requirements: document.getElementById('jobRequirements').value
-};
+    jobTitle: jobTitle,
+    company: company,
+    baseSalary: baseSalary,
+    equity: document.getElementById('equity').value,
+    bonus: document.getElementById('bonus').value,
+    hoursPerWeek: parseInt(document.getElementById('hoursPerWeek').value) || 0,
+    workEnv: document.getElementById('workEnv').value,
+    fundingStage: document.getElementById('fundingStage').value,
+    teamSize: parseInt(document.getElementById('teamSize').value) || 0,
+    industry: document.getElementById('industry').value,
+    concerns: document.getElementById('concerns').value,
+    requirements: document.getElementById('jobRequirements').value
+  };
+
   try {
     const response = await fetch("/api/analyze-offer", {
       method: "POST",
@@ -1504,17 +1510,12 @@ if (analysisCount >= 5) {
       progressContainer.remove();
     }, 500);
     
+    // THIS BLOCK SHOULD APPEAR ONLY ONCE
     decisions.push({ ...aiAnalysis, job, profile, salaryData, timestamp: new Date().toLocaleString() });
     displayResult(aiAnalysis, salaryData, job, profile);
     showScreen('resultScreen');
     showFeedbackTab();
 
-   decisions.push({ ...aiAnalysis, job, profile, salaryData, timestamp: new Date().toLocaleString() });
-    displayResult(aiAnalysis, salaryData, job, profile);
-    showScreen('resultScreen');
-    showFeedbackTab();
-
-    // ADD THIS HERE
     // Update counter
     const remaining = Math.max(0, 5 - analysisCount);
     const counterEl = document.getElementById('analysesRemaining');
@@ -1526,32 +1527,7 @@ if (analysisCount >= 5) {
       counterContainer.innerHTML = 
         '<span style="color: #ffb347; font-weight: 600;">⚠️ Last free analysis! Subscribe for unlimited.</span>';
     }
-    // END
     
-  } catch (error) {
-    console.error('Analysis error:', error);
-    alert('Error during analysis. Please try again.');
-  }
-```
-
----
-
-## Visual Guide:
-
-**Before:**
-```
-[Job Input Fields]
-[Analyze This Offer Button]
-</div>
-```
-
-**After:**
-```
-[Job Input Fields]
-[Analyze This Offer Button]
-5 free analyses remaining  ← NEW
-</div>
-
   } catch (error) {
     console.error('Analysis error:', error);
     alert('Error during analysis. Please try again.');
@@ -2136,36 +2112,6 @@ async function completePayment() {
 // ✅ Error handling if analysis fails
 // ✅ User gets clear feedback at every step
 
-
-async function completePayment() {
-  closePaymentModal();
-  
-  // Show loading state immediately
-  showScreen('resultScreen');
-  document.getElementById('resultContent').innerHTML = `
-    <div style="text-align: center; padding: 40px;">
-      <div class="spinner-big"></div>
-      <p style="color: #6b7280; margin-top: 20px;">Analyzing your offer...</p>
-    </div>
-  `;
-  
-  // Wait for analysis to complete, then show results
-  const success = await runAnalysisAfterPayment();
-  
-  if (!success) {
-    // If analysis failed, show error message
-    document.getElementById('resultContent').innerHTML = `
-      <div style="text-align: center; padding: 40px;">
-        <p style="color: #ff6b6b; font-size: 18px; font-weight: 700;">❌ Analysis Failed</p>
-        <p style="color: #6b7280; margin-top: 10px;">Please contact support for a refund.</p>
-        <button class="btn-primary" onclick="goToJobScreen()" style="margin-top: 20px;">Try Again</button>
-      </div>
-    `;
-  } else {
-    // Success - results are already displayed by displayResult() call in runAnalysisAfterPayment()
-    showFeedbackTab();
-  }
-}
 
 function closePaymentModal() {
   document.getElementById('paymentOverlay').classList.remove('show');
