--- a/index.html
+++ b/index.html
@@ -1005,6 +1005,10 @@ input::placeholder, textarea::placeholder { color: #9ca3af; }
         </div>
       </div>
 
+     <div id="analysisCounter" style="text-align: center; margin-top: 15px; color: #6b7280; font-size: 13px;">
+  <span id="analysesRemaining">5</span> free analyses remaining
+</div>
+
       <!-- RESULT SCREEN -->
       <div id="resultScreen" class="hidden">
         <div class="app-header">
@@ -1501,6 +1505,12 @@ async function analyzeOffer() {
     decisions.push({ ...aiAnalysis, job, profile, salaryData, timestamp: new Date().toLocaleString() });
     displayResult(aiAnalysis, salaryData, job, profile);
     showScreen('resultScreen');
+   // Update counter
+document.getElementById('analysesRemaining').textContent = Math.max(0, 5 - analysisCount);
+if (analysisCount >= 4) {
+  document.getElementById('analysisCounter').innerHTML = 
+    '<span style="color: #ffb347; font-weight: 600;">⚠️ Last free analysis! Subscribe for unlimited.</span>';
+}
     showFeedbackTab();
 
   } catch (error) {
